# aoc

./: .gitignore  .rustfmt.toml  Cargo.toml  README.md  createAoc.ts  fetchInput.ts  index.ts
alt/2025/: 10.rs  6p2.ts
aoc/: Cargo.toml
aoc/src/: lib.rs
aoc2023/: Cargo.toml  README.md
aoc2023/src/: lib.rs  main.rs
aoc2023/src/days/: day1.rs  day10.rs  day11.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc2024/: .gitignore  Cargo.toml  README.md
aoc2024/src/: lib.rs  main.rs
aoc2024/src/days/: day1.rs  day11.rs  day13.rs  day14.rs  day17.rs  day18.rs  day19.rs  day2.rs  day25.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs
aoc2025/: Cargo.toml  README.md
aoc2025/src/: lib.rs
aoc2025/src/days/: day1.rs  day10.rs  day11.rs  day12.rs  day16.rs  day2.rs  day3.rs  day4.rs  day5.rs  day6.rs  day7.rs  day8.rs  day9.rs  mod.rs
aocrunner/: Cargo.toml
aocrunner/src/: main.rs
template/: README.md
template/src/: main.rs
template/src/days/: mod.rs
